--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.28",
+    "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -17,6 +21,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "@vue/babel-plugin-jsx": "^1.0.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -25,11 +30,13 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "typescript": "~3.9.3"
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
+    "typescript": "~3.9.3",
+    "vue-cli-plugin-element-plus": "0.0.13"
   },
   "eslintConfig": {
     "root": true,
