--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "node-sass": "^5.0.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-element-plus": "0.0.13"
   },
